--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
       border-radius: 10px;
       margin-bottom: 20px;
     }
+    button:hover{
+      box-shadow: 0px 0px 10px 0px hsl(212, 21%, 14%);
+    }
     /* styles for mobile devices */
     @media only screen and (max-width:450px){ 
       .con{
